# rpminspect

./: .git-blame-ignore-revs  .gitignore  .mailmap  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS  AUTHORS.md  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.test  GNUmakefile  HISTORY  MISSING  MIT.txt  Makefile  Makefile.am  README  README.md  RELEASE  TODO  configure.ac  meson.build  meson_options.txt  release.sh  rpminspect.spec.in  srpm.sh  tox.ini
.actionspanel/: buttons.yml
.copr/: Makefile  adjust-release.sh  installate-package.sh  installate-packages.sh  instpkgs.sh
.github/: .codecov.yml  install-libmandoc.sh  ubuntu-pkgs.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: almalinux.yml  alpinelinux.yml  altlinux.yml  (+34 more)
contrib/: README.md  devel-rpminspect  report-json2html.py  viewer.html
data/: Makefile.am  generic.dson  generic.json  generic.yaml  meson.build  rpminspect.conf  rpminspect.yaml
data/abi/: GENERIC
data/abi-checking-whitelist/: Makefile.am
data/capabilities/: GENERIC  Makefile.am
data/fileinfo/: GENERIC
data/icons/: GENERIC
data/licenses/: Makefile.am  generic.json
data/political-whitelist/: GENERIC  Makefile.am
data/politics/: GENERIC
data/rebaseable/: GENERIC
data/remedy/: generic.toml
data/security/: GENERIC
data/setuid/: GENERIC  Makefile.am
data/st_mode/: GENERIC  Makefile.am
data/stat-whitelist/: Makefile.am
data/version-whitelist/: GENERIC  Makefile.am
doc/: Doxyfile  api.rst  conf.py  configuration.rst  development.rst  diff.3  git.md  index.rst  installation.rst  intro.rst  koji-api.txt  release.rst  reporting.rst  testing.rst  usage.rst
include/: callbacks.h  constants.h  helpers.h  hsearch_r.h  i18n.h  init.h  inspect.h  meson.build  output.h  parallel.h  parser.h  queue.h  readelf.h  remedy.h  results.h  rpminspect.h  secrules.h  types.h  tyranny.h
include/compat/: meson.build
include/internal/: callbacks.h  tyranny.h
lib/: abi.c  abspath.c  arches.c  array.c  badwords.c  builds.c  bytes.c  checksums.c  constants.h  copyfile.c  curl.c  debug.c  delta.c  deprules.c  diags.c  diff.c  filecmp.c  fileinfo.c  files.c  flags.c  free.c  fs.c  humansize.c  ignore.c  init.c  inspect.c  inspect.h  inspect_abidiff.c  inspect_addedfiles.c  inspect_annocheck.c  inspect_arch.c  inspect_badfuncs.c  inspect_capabilities.c  inspect_changedfiles.c  inspect_changelog.c  inspect_config.c  inspect_debuginfo.c  inspect_desktop.c  inspect_disttag.c  inspect_doc.c  (+85 more)
libtoml/: README.rpminspect  meson.build  toml.c  toml.h  toml_parse.rl  toml_private.c
libxdiff/: AUTHORS  README  meson.build  xdiff.h  xdiffi.c  xdiffi.h  xemit.c  xemit.h  xhistogram.c  xmerge.c  xprepare.c  xutils.c  xutils.h
osdeps/: README.md
po/: LINGUAS  POTFILES  meson.build  rpminspect.pot  ru.po
regress/: README  all-inspections-kernel.sh  indiv-inspections-kernel.sh
src/: Makefile.am  builds.c  builds.h  meson.build  rpminspect.1  rpminspect.c  rpminspect.conf
src/librpminspect/: Makefile.am  badwords.c  compression.c  constants.h  copyfile.c  files.c  free.c  init.c  inspect.c  inspect.h  inspect_addedfiles.c  inspect_changedfiles.c  inspect_desktop.c  inspect_disttag.c  inspect_elf.c  inspect_emptyrpm.c  inspect_javabytecode.c  inspect_kernel.c  inspect_license.c  inspect_manpage.c  inspect_metadata.c  inspect_modularity.c  inspect_removedfiles.c  inspect_specname.c  inspect_xml.c  koji.c  listfuncs.c  local.c  magic.c  mkdirp.c  output.c  output.h  output_json.c  output_text.c  peers.c  pic_bits.sh  readelf.c  readelf.h  results.c  results.h  (+8 more)
src/rpminspect/: Makefile.am  builds.c  builds.h  rpminspect.1  rpminspect.c  rpminspect.conf
test/: baseclass.py  meson.build  test_abidiff.py  test_addedfiles.py  test_annocheck.py  test_badfuncs.py  test_capabilities.py  test_cfg.py  test_changedfiles.py  test_changelog.py  test_command.py  test_config.py  test_debuginfo.py  test_default.py  test_desktop.py  test_disttag.py  test_doc.py  test_elf.py  test_emptyrpm.py  test_files.py  test_filesize.py  test_kmod.py  test_license.py  test_lostpayload.py  test_lto.py  test_manpage.py  test_metadata.py  test_modularity.py  test_ownership.py  test_patches.py  test_pathmigration.py  test_permissions.py  test_politics.py  test_removedfiles.py  test_rpmdeps_conflicts.py  test_rpmdeps_enhances.py  test_rpmdeps_obsoletes.py  test_rpmdeps_provides.py  test_rpmdeps_recommends.py  test_rpmdeps_requires.py  (+13 more)
test/data/: forbidden-ipv6.c  macros.pyproject  mathlib.c
test/data/SPECS/: bad.spec  good-group.spec  good-tabbed-group.spec  good-tabbed.spec  good.spec
test/data/capabilities/: GENERIC
test/data/compression/: test1-high.bz2  test1-high.xz  test1-low.bz2  test1-low.xz  test2-high.bz2  test2-high.xz  test2-low.bz2  test2-low.xz
test/data/derp-kmod/: Makefile  derp.c
test/data/derp-kmod-aliases/: derp.c
test/data/derp-kmod-depends/: derp.c
test/data/derp-kmod-params/: Makefile  derp.c
test/data/fileinfo/: GENERIC
test/data/licenses/: test.json
test/data/politics/: GENERIC
test/data/security/: GENERIC
test/data/unicode/: Makefile  bad.c  bad.s  commenting-out-new.c  early-return-new.c  good.c  status.sh
test/lib/: elftest.c  test-abspath.c  test-arches.c  test-badwords.c  test-cpp.cpp  test-humansize.c  test-init.c  test-inspect_elf.c  test-koji.c  test-main.c  test-main.h  test-results.c  test-strfuncs.c  test-tty.c
tests/: Makefile.am  baseclass.py  rpminspect-help.sh  rpminspect-segv.sh  test_changelog.py  test_command.py  test_default.py  test_desktop.py  test_disttag.py  test_elf.py  test_emptyrpm.py  test_kmod.py  test_license.py  test_manpage.py  test_metadata.py  test_pathmigration.py  test_shellsyntax.py  test_specname.py  test_xml.py
tests/librpminspect/: Makefile.am  elftest.c  test-badwords.c  test-free.c  test-init.c  test-inspect_elf.c  test-koji.c  test-main.c  test-main.h  test-strfuncs.c  test-tty.c
utils/: determine-os.sh  find-ninja.sh  gate.sh  make-release.sh  mkannounce.sh  mkrpmchangelog.sh  release.sh  srpm.sh  submit-koji-builds.sh  update-uthash.sh
(+138 files in other folders)
